--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -71,9 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/start"
-        android:backgroundTint="@color/colorPrimary"
-        android:textColor="@android:color/background_dark"
-        android:textStyle="bold"
+        style="@style/AppTheme.Base.ButtonPrimary"
         android:layout_marginBottom="16dp"
         android:layout_marginHorizontal="@dimen/mg_hor_wide_view"
         app:layout_constraintBottom_toBottomOf="parent"
