Crear estilo para títulos

--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -34,11 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/empecemos"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textColor="@android:color/black"
+        style="@style/AppTheme.Base.Title1"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toEndOf="@id/gd_start"
         app:layout_constraintEnd_toStartOf="@id/gd_end"
