--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -28,11 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empecemos"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:gravity="center"
-        android:textAlignment="center"
+        style="@style/AppTheme.Base.Title1"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="@id/iv_hero"
         app:layout_constraintRight_toRightOf="@id/iv_hero"
