--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -27,11 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/titulo_bienvenida"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textAlignment="center"
         android:layout_marginTop="8dp"
+        style="@style/AppTheme.Base.Title1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_logo"
