--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,12 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="AppTheme.Base.Title1" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@android:color/black</item>
+        <!--<item name="android:textAlignment">center</item>-->
+    </style>
+
 </resources>
