--- a/app/src/main/res/layout/fragment_point_profile.xml
+++ b/app/src/main/res/layout/fragment_point_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ly_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -21,6 +22,14 @@
         android:layout_marginTop="16dp"
         android:textAppearance="?attr/textAppearanceBody1"
         tools:text="Universidad Centroamericana UCA. Pabellón de salas de laboratorios ubicado frente al centro de historia."
+        />
+
+    <Button
+        android:id="@+id/btn_open_map"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/ver_ubicacion_en_mapa"
         />
 
     <ImageView
