--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -36,9 +36,9 @@
         />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_fullname"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/til_fullname"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="32dp"
         android:hint="@string/fullname"
@@ -51,6 +51,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
+            android:id="@+id/et_fullname"
             android:layout_height="wrap_content"
             android:lines="1"
             android:inputType="textPersonName"
@@ -59,9 +60,9 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:id="@+id/til_email"
         android:layout_marginTop="16dp"
         android:hint="@string/email"
         app:helperText="@string/email_sample"
@@ -72,6 +73,7 @@
         app:layout_constraintTop_toBottomOf="@id/til_fullname">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:lines="1"
